--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- external CSS link -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600,800" rel="stylesheet"> 
 
 </head>
 
@@ -35,7 +35,7 @@
 				<h2 class="subject">How I implemented Relaxr in 2 weeks and changed my life.</h2>
 				<img src="images/blog_photo1.jpg" alt="rowing teams racing" class="featured-image">
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita vero, sapiente numquam consectetur tenetur accusamus fuga optio quasi. Officia, consequuntur earum consequatur voluptates accusantium eos architecto sint similique nam quisquam.</p>
-				<a href="" class="cta read-more">Read More ></a>
+				<a href="" class="cta">Read More ></a>
 				<hr/>
 			</div>
 
@@ -43,17 +43,40 @@
 				<h2 class="subject">I traveled across the globe thanks to Relaxr's Excel automation</h2>
 				<img src="images/blog_photo2.jpg" alt="" class="featured-image">
 				<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quasi officiis quidem. Minima sint voluptate accusamus. Alias et ipsam nulla aperiam, doloremque veniam, vitae, accusantium, fugiat illo vel aspernatur nam.</p>
-				<a href="" class="cta read-more">Read More ></a>
+				<a href="" class="cta">Read More ></a>
 				<hr/>
 			</div>
 
 		</div>
 
 		<div class="col col-33 clearfix">
-			<h2 class="title ">Categories</h2>
+			<ul class="title">
+				Categories
+				<li class="first-item">Success stories</li>
+				<li>Stats</li>
+				<li>How tos</li>
+				<li>Best of</li>
+				<li class="last-item">Business tips</li>
+			</ul>
+
+			<p class="title">About Relaxr</p>
+			<p class="sidebar-par">Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.</p>
+			<p class="learn-more">Learn More</p>
+			<div class="adbox">
+				<p class="ad-title">Ad Unit</p>
+			</div>
 
 		</div>
+	<!-- 	<div class="sign-up">
+			<button type= "button" class="button2">Sign Up Now!</button>
+		</div> -->
 		<footer>
+			<h2>Relaxr</h2>
+			<div class="logos">
+				<img src="images/twitter.png" alt="the twitter logo" class="twitter">
+				<img src="images/facebook.png" alt="the facebook logo" class="facebook">
+			</div>
+			<p>&copy; Copyright 2015. Relaxr.</p>
 		</footer>
 	</div><!-- #container -->
 </body>
